Arquivos com links diretos html

--- a/html/L-Corporativo.html
+++ b/html/L-Corporativo.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿.<!DOCTYPE html>
 <html class="no-js" lang="pt-br" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
     <head>
