Arquivos sem links diretos

--- a/html/L-CEM-Abandoned-Cart.html
+++ b/html/L-CEM-Abandoned-Cart.html
@@ -16,10 +16,10 @@ xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 <table id="Table_01" width="550"  border="0" cellpadding="10" cellspacing="0">
 	<tr style="background-color:#002e40;width:590px;height:60px">
                 <td style="width:150px;height:60px;text-align:center;border-spacing:0;padding:8;">
-                  <img src="http://www.bbbaterias.vtexcommercestable.com.br/arquivos/logo-sem-fundo.png" alt="EnergiLux - Energia que liga você" style="max-height:75%;border:0;"/>
+                  <img src="/arquivos/logo-sem-fundo.png" alt="EnergiLux - Energia que liga você" style="max-height:75%;border:0;"/>
                 </td>
                 <td style="width:100px;height:60px;text-align:right;border-spacing:0;padding:2;">
-                  <img src="http://www.bbbaterias.vtexcommercestable.com.br/arquivos/cart_bateriaselamp.png" alt="" style="max-height:100%;border:0;"/>
+                  <img src="/arquivos/cart_bateriaselamp.png" alt="" style="max-height:100%;border:0;"/>
                 </td>
                 <td style="width:240px;height:60px;text-align:center;border-spacing:0;padding:0;">
                   <span style="color:#fff;font-weight:bold;font-size:12px">Acompanhamento de seu pedido</span>
@@ -84,8 +84,8 @@ xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
 		<td colspan="2" align="center">
         <br />
-			<a href="http://www.energilux.com.br/checkout/cart/{!rclastcart}&amp;utm_source=CarrinhoAbandonado&amp;utm_medium=VTEX&amp;utm_campaign=CarrinhoAbandonado">
-			<img style="display:block" src="http://bbbaterias.vteximg.com.br/arquivos/btn_comprar_energilux.png" alt="Comprar" title="Comprar"/>
+			<a href="/checkout/cart/{!rclastcart}&amp;utm_source=CarrinhoAbandonado&amp;utm_medium=VTEX&amp;utm_campaign=CarrinhoAbandonado">
+			<img style="display:block" src="/arquivos/btn_comprar_energilux.png" alt="Comprar" title="Comprar"/>
 			</a>
 		</td>
 	</tr>
@@ -105,12 +105,12 @@ xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 	</td>
 	</tr>
 		<tr height="80">
-		<td colspan="5"><font face="Verdana, Arial, Helvetica, sansserif" color="#666666" size="1"><center>Não deixe de conferir nossas ofertas. <a href="http://www.energilux.com.br" target="_blank">Acesse aqui a nossa loja.</a></center></font></td>
+		<td colspan="5"><font face="Verdana, Arial, Helvetica, sansserif" color="#666666" size="1"><center>Não deixe de conferir nossas ofertas. <a href="https://www.energilux.com.br" target="_blank">Acesse aqui a nossa loja.</a></center></font></td>
 	</tr>
 	<tr>	
 		<td align="center" colspan="5">
 			<font face="Verdana, Arial, Helvetica, sansserif" color="#666666" size="1">Precisa de ajuda? Fale com a
- 				<a href="http://www.energilux.com.br/central-de-atendimento#atendimento-por-telefone">
+ 				<a href="/central-de-atendimento#atendimento-por-telefone">
 				<font size="1" color="#2f2f2f" face="Verdana, Arial, Helvetica, sansserif">Central de Atendimento</font></a>
 			</font>
 		</td>
