Arquivos com links diretos

--- a/html/L-prateleira-busca.html
+++ b/html/L-prateleira-busca.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
     Id do Template de Prateleira: 0f6374d5-7dbf-4835-a86b-8ed2bb2f89bb
     Nome: L-prateleira-busca
     Classe CSS: shelf shelf-first nova
@@ -8,9 +8,12 @@
 #set($uri = $product.Uri)
 #set($escapedName = $product.HtmlEscapedName)
 
-<div class="flag">
-    <div class="flag-discount">$product.HightLight $product.DiscountHightLight</div>
-</div> <!-- Flags -->
+
+<a href="$uri">
+    <div class="flag">
+        <div class="flag-discount">$product.HightLight $product.DiscountHightLight</div>
+    </div>
+</a><!-- Flags -->
 
 
 
