Arquivos sem links diretos

--- a/html/L-prateleira-modelo-2.html
+++ b/html/L-prateleira-modelo-2.html
@@ -55,7 +55,7 @@ Categoria:
 
 
 <li>
-<img src="http://www.energilux.com.br/arquivos/Lumens_Icon40.jpg" alt="lumens">
+<img src="/arquivos/Lumens_Icon40.jpg" alt="lumens">
 <div class="lumens">
 $product.ProductField(1426)
 $product.ProductField(1360)
@@ -72,7 +72,7 @@ $product.ProductField(44)
 
 
 <li>
-<img src="http://www.energilux.com.br/arquivos/warranty-shield.png" alt="garantia">
+<img src="/arquivos/warranty-shield.png" alt="garantia">
 <div class="lumens">
 $product.ProductField(1425)
 $product.ProductField(1371)
@@ -90,7 +90,7 @@ $product.ProductField(641)
 
 <li>
 <a title="avaliacoes" href="$uri" class="5estrelas">
-  <img src="http://www.energilux.com.br/arquivos/5estrelas.png" alt="avaliacoes">
+  <img src="/arquivos/5estrelas.png" alt="avaliacoes">
 </a>
 </li>
 
