--- a/html/L-prateleira-modelo.html
+++ b/html/L-prateleira-modelo.html
@@ -41,7 +41,7 @@
     <!--<div data-trustvox-product-code="$product.Id"></div>-->
 
     
-	<img src="http://www.energilux.com.br/arquivos/5estrelas.png" alt="avaliacoes"></img>
+	<img src="/arquivos/5estrelas.png" alt="avaliacoes"></img>
 
 </div>
 
