--- a/html/L-prateleira-busca.html
+++ b/html/L-prateleira-busca.html
@@ -56,7 +56,7 @@ Categoria:
 
 
 <li>
-<img src="http://www.energilux.com.br/arquivos/Lumens_Icon40.jpg" alt="lumens">
+<img src="/arquivos/Lumens_Icon40.jpg" alt="lumens">
 <div class="lumens">
 $product.ProductField(1449)
 $product.ProductField(1426)
@@ -74,7 +74,7 @@ $product.ProductField(44)
 
 
 <li>
-<img src="http://www.energilux.com.br/arquivos/warranty-shield.png" alt="garantia">
+<img src="/arquivos/warranty-shield.png" alt="garantia">
 <div class="lumens">
 $product.ProductField(1454)
 $product.ProductField(1425)
@@ -93,7 +93,7 @@ $product.ProductField(641)
 
 <li>
 <a title="avaliacoes" href="$uri" class="5estrelas">
-  <img src="http://www.energilux.com.br/arquivos/5estrelas.png" alt="avaliacoes">
+  <img src="/arquivos/5estrelas.png" alt="avaliacoes">
 </a>
 </li>
 
