--- a/html/L-Home.html
+++ b/html/L-Home.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html class="no-js" lang="pt-br" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
     <head>
@@ -267,13 +267,12 @@
 
 
                             <div class="seo-text">
-                                <vtex:contentPlaceHolder id="texto-seo" />
+                            
+                                <vtex:template id="L-seo-footer" />
+                            
+                                <!--<vtex:contentPlaceHolder id="texto-seo" />-->
 
-                <!--  avaliacoes Energilux -->
-                <vtex:template id="Energilux-avaliacoes-home" />
-                 <!--  avaliacoes Energilux -->
-
-
+                                <vtex:template id="Energilux-avaliacoes-home" />
 
                             </div>
 
