L-home antes do banner mosaico

--- a/html/L-Home.html
+++ b/html/L-Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html class="no-js" lang="pt-br" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
     <head>
@@ -40,8 +40,14 @@
 
                             <div class="slider-home">
                                 <vtex:contentPlaceHolder id="banner-slider" />
-                            </div> <!-- Slider -->
-
+                            </div> <!-- Slider Desk -->
+                            
+                            <div class="slider-home-mobile">
+                                <div class="slider-home">
+                                    <vtex:contentPlaceHolder id="banner-slider-mobile" />
+                                </div> <!-- Slider Mobile -->
+                            </div>
+                            
                         </div>
 
                         <div class="home-tipbar">
